# CaptiveConnect

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
CaptiveConnect/android/: build.gradle
CaptiveConnect/captive-portal/: server.js
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/captiveconnect/app/: MainActivity.kt
android/app/src/main/java/com/captiveconnect/app/service/: HotspotService.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-xxxhdpi/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/src/: AndroidManifest.xml
android/src/app/: CaptiveConnectApp.kt
android/src/service/: HotspotService.kt
android/src/ui/: MainActivity.kt
captive-portal/: package-lock.json  package.json
captive-portal/public/: index.html  scripts.js
docs/: development.md
edge-scripts/: setup-hotspot.sh
src/: main.rs
src/android/app/src/main/java/com/captiveconnect/hotspot/: HotspotManager.kt
src/captive-portal/: server.js
src/captive-portal/public/: index.html  scripts.js
